@@ -499,6 +499,7 @@ Tamito Kajiyama
 Peter van Kampen
 Jacob Kaplan-Moss
 Piotr Kasprzyk
+Anton Kasyanov
 Lou Kates
 Hiroaki Kawai
 Sebastien Keim
